@@ -111,6 +111,9 @@ block.olupis-fortified-payload-router.name =[yellow]Fortified payload Router (sp
 block.olupis-fortified-payload-router.description =Distributes payloads into adjacent blocks. Functions as a sorter when a filter is set.
 block.olupis-alternate-articulator.name =[yellow]Alternate Articulator (sbp)
 block.olupis-alternate-articulator.description =Allow constructs to manufacture alternate units of a higher tier
+block.olupis-repair-pin.name =[yellow]Repair Pin (sbp)
+block.olupis-repair-pin.description =Fires a reaparing rail bullet to damaged units
+block.olupis-repair-pin.details =cough cough\n railing\ncough cough \n pin\n cough cough\n *insert bottom joke here*
 
 block.olupis-unit-replicator.name =[yellow]Unit replicator (sp)
 block.olupis-unit-replicator.description =Remnant factories, produces varied units base on Its previous configuration, industrable but slow
@@ -168,7 +171,7 @@ block.olupis-rusty-wall-large.name =Large Rusty Wall
 block.olupis-rusty-wall-large.description =Large. Blocks bullets. Weak structural integrity due to the rust.
 block.olupis-rusty-wall-huge.name =Huge Rusty Wall
 block.olupis-rusty-wall-huge.description =Huge. Blocks bullets. Weak structural integrity due to the rust.
-block.olupis-rusty-wall-huge.details =Despite its large size and rusty, like it slimmer versions, this rust lump can float on edges of deep water
+block.olupis-rusty-wall-huge.details =Despite its large size and rusty, like it's slimmer versions, this rust lump can float on edges of deep water
 block.olupis-rusty-wall-gigantic.name =Gigantic Rusty Wall
 block.olupis-rusty-wall-gigantic.description =Gigantic. Blocks bullets. Weak structural integrity due to the rust.
 block.olupis-iron-wall.name =Iron Wall
@@ -408,6 +411,12 @@ setting.nyfalis-auto-ban.name =Ban Nyfalis blocks in other planets \u26A0
 setting.nyfalis-auto-ban.description =[scarlet]\u26A0 WILL RUIN THE BALANCE, YOU HAVE BEEN WARNED \u26A0 []\n Bans Nyfalis blocks in other planets / custom games not set in nyfalis
 setting.nyfalis-disclaimer.name = Show Disclaimer
 setting.nyfalis-disclaimer.description =Gnat-chan: Nuuuu Please don't turn off me greeting you every time you boot up the game TmT
+
+setting.nyfalis-data-category =Nyfalis Game Data
+setting.nyfalis-resetsector.name =Clear Nyfalis Sectors
+setting.nyfalis-resetsector.confirm =Are you sure you want to clear [scarlet]all[] of your [accent]Nyfalis campaign saves[]? \n[gray]Other Campaign saves shouldn't be affected
+setting.nyfalis-resetresearch.name =Clear Nyfalis Research
+setting.nyfalis-resetresearch.confirm =Are you sure you want to clear [scarlet]all[] of your [accent]Nyfalis Research[]? \n[gray]Other Research shouldn't be affected
 
 planet.olupis-olupis.name =Nyfalis
 planet.olupis-olupis.description =Main planet, resistance detected, conquer when technology is acquired
