@@ -8,15 +8,19 @@ Last updated on 21/11/2023 (+8utc) by Jirocab/RushieWashie
     + Tiles added: glowSprouts, lumaSprouts, mossyDirt, frozenDirt, hardenMud, mossyhardenMud, deadBush, deadTree, hardenMuddyVent
     + Status Effect added: lubed, mossed, deployed
     + Items added: alcoAlloy, aluminum
+    + Added a buttons to clear Nyfalis Sectors and research data
     + Added a toggleable weather effect for cloud shadows (still need to be manually added as a weather)
     ~ Balance: Reduced junction to better scale with other blocks
     ~ Balance: Core health scale 2x -> 1.5x from previous their, Remnant buffed to 1800hp
     ~ Balance: Relic & Vestige Weapon types swapped, stats unchanged
     ~ Bug Fix: Colours of certain content not being set correctly
     ~ Bug Fix: Hit boxes of certain units being small/bigger than appropriate
+    ~ Bug Fix: Double tapping on Nyfalian System will launch you in sector 0 of nyfalis
     ~ Improved Gnat and Phorid's attacking visual design to better indicate area of damage
     ~ Sprites Contributed by Otamamori: cobalt (item), aluminum (item), alcoAlloy(item)
     ~ Sprites Contributed by Remington Thomas: acerodon
+    + Sprites Contributed by Ethanol10: acerodon
+
     -- Music removed from content mod - https://github.com/JiroCab/Nyfalis-Music
 
 = Version 1-6 (9d343a0) = https://github.com/JiroCab/Olupis/tree/9d343a0e5fc3aab9c5efc5073e9b9d7e4edfb1e5
